@@ -13,11 +13,34 @@ use EBox::SysInfo;
 
 my $statusStringJson = JSON::XS->new()->encode(EBox::SysInfo::dashboardStatusStrings());
 </%init>
-<script type="text/javascript"  src="/data/js/dashboard.js">//</script>
+<script type="text/javascript" src="/data/js/dashboard.js">//</script>
+<script type="text/javascript" src="/data/js/dialog.js">//</script>
 <script type="text/javascript" src="/data/js/table-helper.js">//</script>
 <script type="text/javascript" src="/data/js/format.js">//</script>
 <script type="text/javascript" src="/data/js/jquery.flot.js">//</script>
 % if ($message) {
+<script type="text/javascript">
+function closeNotification() {
+  $('notification_container').hide();
+  var url = '/SysInfo/CloseNotification';
+  $.ajax({url: url, data: { message: '<% $message->{name} %>' } });
+}
+
+function releaseUpgrade(title) {
+      Zentyal.Dialog.showURL('/ReleaseUpgrade', {
+          title: title,
+          close: function() { window.location.reload(); }
+      });
+}
+
+function upgradeInstructions(title, html) {
+      Zentyal.Dialog.showHTML(html, {
+          title: title,
+          width: 500,
+          close: function() { window.location.reload(); }
+      });
+}
+</script>
 <div id="notification_container" class='tip'>
 <span id="notification_text"><% $message->{text} %></span>
 <a id="popx" onclick="Zentyal.Dashboard.closeNotification('<% $message->{name} %>'); return false">×</a>
